--- a/app.wxss
+++ b/app.wxss
@@ -2,7 +2,7 @@
 @import "./style/weui.wxss";
 
 page{
-    background-color: #F8F8F8;
+    background-color: #FFF;
     font-size: 16px;
     font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
 }
