--- a/pages/pdf/pdf.wxml
+++ b/pages/pdf/pdf.wxml
@@ -23,9 +23,9 @@
       binderror='error'>
     </canvas>
     <view class='bottonFrame'>
-      <button class='weui-form-preview__btn weui-form-preview__btn_default' lang="zh_CN" bindtap='back'>返回</button>
-      <button class='weui-form-preview__btn weui-form-preview__btn_default' lang="zh_CN" bindtap='clear'>清除</button>
-      <button type='submit' class='weui-form-preview__btn weui-form-preview__btn_primary' lang="zh_CN" bindtap='mixinFile'>生成签名</button>
+      <button class='weui-form-preview__btn weui-form-preview__btn_default' lang="zh_CN" bindtap='back'><image class="icon" src="../Resources/back.png" />返回</button>
+      <button class='weui-form-preview__btn weui-form-preview__btn_default' lang="zh_CN" bindtap='clear'><image class="icon" src="../Resources/clear.png" />清除</button>
+      <button type='submit' class='weui-form-preview__btn weui-form-preview__btn_primary' lang="zh_CN" bindtap='mixinFile'><image class="icon" src="../Resources/sign.png" />生成</button>
     </view>
   </view>
 </view>
@@ -35,8 +35,8 @@
     </canvas>
   </view>
   <view class='bottonFrame'>
-    <button class='weui-form-preview__btn weui-form-preview__btn_default' lang="zh_CN" bindtap='showCancel'>返回</button>
-    <button class='weui-form-preview__btn weui-form-preview__btn_default' lang="zh_CN" bindtap='nextOne'>继续</button>
-    <button type='submit' class='weui-form-preview__btn weui-form-preview__btn_primary' lang="zh_CN" bindtap='ok'>确定</button>
+    <button class='weui-form-preview__btn weui-form-preview__btn_default' lang="zh_CN" bindtap='showCancel'><image class="icon" src="../Resources/back.png" />返回</button>
+    <button class='weui-form-preview__btn weui-form-preview__btn_default' lang="zh_CN" bindtap='nextOne'><image class="icon" src="../Resources/keep.png" />继续</button>
+    <button type='submit' class='weui-form-preview__btn weui-form-preview__btn_primary' lang="zh_CN" bindtap='ok'><image class="icon" src="../Resources/submit.png" />提交</button>
   </view>
 </view>
