--- a/pages/pdf/pdf.wxml
+++ b/pages/pdf/pdf.wxml
@@ -36,7 +36,7 @@
   </view>
   <view class='bottonFrame'>
     <button class='weui-form-preview__btn weui-form-preview__btn_default' lang="zh_CN" bindtap='showCancel'><image class="icon" src="../Resources/back.png" />返回</button>
-    <button class='weui-form-preview__btn weui-form-preview__btn_default' lang="zh_CN" bindtap='nextOne'><image class="icon" src="../Resources/keep.png" />继续</button>
+    <button wx:if="{{selectedFile.signType == '2' }}" class='weui-form-preview__btn weui-form-preview__btn_default' lang="zh_CN" bindtap='nextOne'><image class="icon" src="../Resources/keep.png" />继续</button>
     <button type='submit' class='weui-form-preview__btn weui-form-preview__btn_primary' lang="zh_CN" bindtap='ok'><image class="icon" src="../Resources/submit.png" />提交</button>
   </view>
 </view>
